--- a/index.html
+++ b/index.html
@@ -1,16 +1,83 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Logo Bouncing Screen</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: #121212;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
 </head>
-
 <body>
-  Hello world
-  <script src="script.js"></script>
-</body>
+  <script>
+    // Configuration
+    const logos = [
+      'logo1.png', 'logo2.png', 'logo3.png', 'logo4.png', 'logo5.png',
+      'logo6.png', 'logo7.png', 'logo8.png', 'logo9.png', 'logo10.png'
+    ]; // Replace these with your logo file paths or URLs
 
+    const canvas = document.createElement('canvas');
+    document.body.appendChild(canvas);
+    const ctx = canvas.getContext('2d');
+
+    // Resize canvas to fill the screen
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    class Logo {
+      constructor(imageSrc, x, y, dx, dy, width = 100, height = 100) {
+        this.image = new Image();
+        this.image.src = imageSrc;
+        this.x = x;
+        this.y = y;
+        this.dx = dx;
+        this.dy = dy;
+        this.width = width;
+        this.height = height;
+      }
+
+      draw() {
+        ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
+      }
+
+      update() {
+        if (this.x + this.width >= canvas.width || this.x <= 0) this.dx *= -1;
+        if (this.y + this.height >= canvas.height || this.y <= 0) this.dy *= -1;
+
+        this.x += this.dx;
+        this.y += this.dy;
+
+        this.draw();
+      }
+    }
+
+    const bouncingLogos = [];
+    logos.forEach((logo, index) => {
+      const x = Math.random() * (canvas.width - 100);
+      const y = Math.random() * (canvas.height - 50);
+      const dx = (Math.random() - 0.5) * 4; // Speed in x-axis
+      const dy = (Math.random() - 0.5) * 4; // Speed in y-axis
+      bouncingLogos.push(new Logo(logo, x, y, dx, dy));
+    });
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      bouncingLogos.forEach(logo => logo.update());
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+  </script>
+</body>
 </html>
