--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     const colors = ['red', 'yellow', 'blue'];
     button.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
 
-    // Add event listener to button (modify this to link to your chess game)
+    // Link to chess.html when button is clicked
     button.addEventListener('click', () => {
-      window.location.href = "chess-game.html"; // Change this to the actual link
+      window.location.href = "chess.html"; // This will open chess.html
     });
   </script>
 </body>
