--- a/chess.html
+++ b/chess.html
@@ -19,8 +19,8 @@
         }
         
         #board {
-            width: 400px; /* Adjust size for the board */
-            height: 400px; /* Ensure the board has both width and height set */
+            width: 1200px; /* Set the width to 1200px */
+            height: 1200px; /* Set the height to 1200px */
             margin: 20px auto;
         }
     </style>
