--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     const colors = ['red', 'yellow', 'blue'];
     button.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
 
-    // Link to chess.html when button is clicked
+    // Link to chess-game.html when button is clicked
     button.addEventListener('click', () => {
-      window.location.href = "chess.html"; // This will open chess.html
+      window.location.href = "chess-game.html"; // Updated link
     });
   </script>
 </body>
