--- a/chess-game.html
+++ b/chess-game.html
@@ -17,15 +17,15 @@
 
         .chessboard {
             display: grid;
-            grid-template-columns: repeat(8, 60px);
-            grid-template-rows: repeat(8, 60px);
+            grid-template-columns: repeat(8, 10vw);
+            grid-template-rows: repeat(8, 10vw);
             gap: 0;
             border: 2px solid #333;
         }
 
         .square {
-            width: 60px;
-            height: 60px;
+            width: 10vw;
+            height: 10vw;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -40,8 +40,8 @@
         }
 
         .piece {
-            width: 50%;
-            height: 50%;
+            width: 90%;
+            height: 90%;
             background-size: cover;
             background-position: center;
         }
