--- a/chess-game.html
+++ b/chess-game.html
@@ -12,7 +12,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f3f3f3;
+            background-color: #121212;
         }
 
         .chessboard {
@@ -32,11 +32,11 @@
         }
 
         .white {
-            background-color: #FFFBF0;
+            background-color: #FFFED8;
         }
 
         .black {
-            background-color: #062E03;
+            background-color: #010328;
         }
 
         .piece {
