--- a/chess-game.html
+++ b/chess-game.html
@@ -17,16 +17,19 @@
         }
 
         .chess-container {
-            max-width: 80vh; /* Prevents chessboard from getting too large */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            max-width: 80vh; /* Ensures it doesn't get too large */
             width: 100%;
         }
 
         .chessboard {
             display: grid;
-            grid-template-columns: repeat(8, min(10vw, 7vh)); 
-            grid-template-rows: repeat(8, min(10vw, 7vh));  
+            grid-template-columns: repeat(8, min(10vw, 7vh));
+            grid-template-rows: repeat(8, min(10vw, 7vh));
             gap: 0;
-            border: 2px solid #333;
+            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.1); /* Soft shadow instead of border */
         }
 
         .square {
