--- a/chess-game.html
+++ b/chess-game.html
@@ -45,7 +45,7 @@
         }
 
         .black {
-            background-color: #010328;
+            background-color: #7A0000;
         }
 
         .piece {
