--- a/chess-game.html
+++ b/chess-game.html
@@ -47,10 +47,10 @@
     background-blend-mode: overlay;
 }
 
-        .black {
-            background-color: #7A0000;
-        background-image: radial-gradient(rgba(120, 0, 0, 0.5) 10%, transparent 70%),
-                      linear-gradient(45deg, rgba(50, 0, 0, 0.2) 25%, transparent 25%);
+.black {
+    background-color: #51B02B;
+    background-image: radial-gradient(rgba(81, 176, 43, 0.5) 10%, transparent 70%),
+                      linear-gradient(45deg, rgba(30, 100, 20, 0.2) 25%, transparent 25%);
     background-blend-mode: overlay;
 }
 
