--- a/chess-game.html
+++ b/chess-game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess Game with S.T.A.N.</title>
+    <title>Chess Game</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -38,21 +38,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            cursor: pointer;
         }
 
         .white {
             background-color: #FFFED8;
-            background-image: radial-gradient(rgba(255,255,255,0.5) 10%, transparent 70%),
-                              linear-gradient(45deg, rgba(200, 200, 200, 0.2) 25%, transparent 25%);
-            background-blend-mode: overlay;
-        }
+           background-image: radial-gradient(rgba(255,255,255,0.5) 10%, transparent 70%),
+                      linear-gradient(45deg, rgba(200, 200, 200, 0.2) 25%, transparent 25%);
+    }
 
         .black {
             background-color: #51B02B;
             background-image: radial-gradient(rgba(81, 176, 43, 0.5) 10%, transparent 70%),
-                              linear-gradient(45deg, rgba(30, 100, 20, 0.2) 25%, transparent 25%);
-            background-blend-mode: overlay;
+                      linear-gradient(45deg, rgba(30, 100, 20, 0.2) 25%, transparent 25%);
         }
 
         .piece {
@@ -65,8 +62,7 @@
         #comments {
             margin-top: 20px;
             font-size: 1.2em;
-            color: #FFF;
-            text-align: center;
+            color: #fff;
         }
     </style>
 </head>
@@ -75,7 +71,6 @@
         <div id="chessboard" class="chessboard"></div>
     </div>
     <div id="comments"></div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stockfish.js"></script>
     <script>
@@ -83,8 +78,19 @@
             const boardElement = document.getElementById('chessboard');
             const commentsElement = document.getElementById('comments');
             const chess = new Chess();
-            const stockfish = new Worker("stockfish.js");
-            let selectedSquare = null;
+            const stockfish = new Worker("https://cdn.jsdelivr.net/npm/stockfish.js");
+            let gameOver = false;
+
+            const initialBoard = [
+                ['bc', 'bkn', 'bb', 'bq', 'bk', 'bb', 'bkn', 'bc'],
+                ['bp', 'bp', 'bp', 'bp', 'bp', 'bp', 'bp', 'bp'],
+                ['--', '--', '--', '--', '--', '--', '--', '--'],
+                ['--', '--', '--', '--', '--', '--', '--', '--'],
+                ['--', '--', '--', '--', '--', '--', '--', '--'],
+                ['--', '--', '--', '--', '--', '--', '--', '--'],
+                ['wp', 'wp', 'wp', 'wp', 'wp', 'wp', 'wp', 'wp'],
+                ['wc', 'wkn', 'wb', 'wq', 'wk', 'wb', 'wkn', 'wc']
+            ];
 
             const pieceImages = {
                 'wp': 'pieces/wp.PNG',
@@ -102,22 +108,20 @@
                 '--': ''
             };
 
+            // Create the board
             function createBoard() {
                 boardElement.innerHTML = '';
                 for (let row = 0; row < 8; row++) {
                     for (let col = 0; col < 8; col++) {
                         const square = document.createElement('div');
-                        const piece = chess.board()[row][col];
+                        const piece = initialBoard[row][col];
                         square.classList.add('square');
                         square.classList.add((row + col) % 2 === 0 ? 'white' : 'black');
-                        square.dataset.square = `${row}-${col}`;
 
-                        square.addEventListener('click', () => handleSquareClick(row, col));
-
-                        if (piece !== null) {
+                        if (piece !== '--') {
                             const img = document.createElement('img');
-                            img.src = pieceImages[piece.color + piece.type];
-                            img.alt = piece.color + piece.type;
+                            img.src = pieceImages[piece];
+                            img.alt = piece;
                             img.classList.add('piece');
                             square.appendChild(img);
                         }
@@ -127,38 +131,51 @@
                 }
             }
 
-            function handleSquareClick(row, col) {
-                if (selectedSquare) {
-                    const move = chess.move({
-                        from: selectedSquare,
-                        to: `${row}-${col}`,
-                    });
-
-                    if (move) {
-                        updateBoard();
-                        stockfish.postMessage("position fen " + chess.fen());
-                        stockfish.postMessage("go depth 5");
-                        selectedSquare = null;
+            // Function to update the board and show commentary
+            function updateBoard() {
+                const board = chess.board();
+                boardElement.innerHTML = '';
+                createBoard();
+                for (let i = 0; i < 64; i++) {
+                    const square = boardElement.children[i];
+                    const piece = board[Math.floor(i / 8)][i % 8];
+                    if (piece) {
+                        const img = document.createElement('img');
+                        img.src = pieceImages[piece.color + piece.type];
+                        img.classList.add('piece');
+                        square.appendChild(img);
                     }
-                } else {
-                    selectedSquare = `${row}-${col}`;
                 }
             }
 
+            // AI Move Functionality
+            function makeMove() {
+                if (gameOver) return;
+
+                const moves = chess.ugly_moves();
+                const move = moves.length === 0 ? null : moves[0]; // Take the first available move
+                if (move) {
+                    chess.ugly_move(move);
+                    updateBoard();
+                    stockfish.postMessage("position fen " + chess.fen());
+                    stockfish.postMessage("go depth 5"); // Set AI depth for beginner level
+                }
+            }
+
+            // Handle Stockfish's response
             stockfish.onmessage = function (event) {
                 if (event.data.includes("bestmove")) {
                     const bestMove = event.data.split(" ")[1];
-                    const move = chess.ugly_move(chess.move(bestMove));
+                    chess.ugly_move(chess.move(bestMove));
                     updateBoard();
                     commentsElement.innerHTML = `S.T.A.N.'s Move: ${bestMove} - Stay fresh, stay bold!`;
                 }
             };
 
-            function updateBoard() {
-                createBoard();
-            }
-
-            createBoard(); // Initialize the board
+            // Start the game
+            createBoard();
+            updateBoard();
+            makeMove(); // AI's first move
         });
     </script>
 </body>
